# youtube_sentiment_spam_models

./: .gitignore  README.md  main.py  pyproject.toml  sample_comments.csv
app/: app.py
src/: data_process.py  hyperparameter_tuning.py  metrics_visualization.py  sentiment_model.py  spam_model.py  train_models.py
