[project]
name = "youtube-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "joblib>=1.5.2",
    "kagglehub>=0.3.13",
    "matplotlib>=3.9.0",
    "nltk>=3.9.1",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.0",
    "streamlit>=1.50.0",
]
