[project]
name = "youtube-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "joblib>=1.5.2",
    "kagglehub>=0.3.13",
    "matplotlib>=3.9.0",
    "nltk>=3.9.1",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.0",
    "streamlit>=1.20.0",
    "transformers>=4.40.0",
    "datasets>=2.13.0",
]
